--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-  PORT: "",
-  DB_USER: "mongotestdb",
-  DB_PASS: "SY1U4gakEVRsn8y6",
-  JWT_SECRET: "",
-  STRIPE_SECRET:"",
+  PORT
+  DB_USER =mongotestdb
+  DB_PASS =SY1U4gakEVRsn8y6
+  JWT_SECRET
+  STRIPE_SECRET
   DB_URL:process.env.DB_URL
