--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_USER=mongotestdb
-DB_PASS=SY1U4gakEVRsn8y6
-JWT_SECRET=QfG3chpAgkXpXLoLeYUIAPanXceEIbQ0oEyqJKCr2IY
+DB_USER=
+DB_PASS=
+JWT_SECRET=
